test/libsolidity/syntaxTests/storageLayoutSpecifier/layout_fractional_number.sol
contract A layout at 3/2 {}
// ----
// TypeError 1763: (21-24): Storage layout cannot be specified by a fractional number.
